# keyframe

./: LICENSE  README.md  main.py  pyproject.toml
.keystats/: 2025-08-27.jsonl
docs/: dev-plan.md
keyframe/: config.py
src/: active_window.py  config.py  jsonl_writer.py  keylogger.py  ocr_client.py  ocr_worker.py  retry_cache.py  scheduler.py  screenshot.py
tests/: test_active_window.py  test_config.py  test_integration.py  test_jsonl_writer.py  test_keylogger.py  test_ocr_client.py  test_phase2_integration.py  test_retry_cache.py  test_scheduler.py  test_screenshot.py
