[project]
name = "keyframe"
version = "0.1.0"
description = "調子とリズムを記録するタイピング・画面モニタリングツールなのだ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.12.10",
    "ty>=0.0.1a19",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
